--- a/frontend/playlizt_app/web/index.html
+++ b/frontend/playlizt_app/web/index.html
@@ -33,6 +33,10 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <div id="loading">
+    <h1>Playlizt</h1>
+    <p>Powered by Blaklizt Entertainment</p>
+  </div>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
