--- a/frontend/playlizt_app/web/index.html
+++ b/frontend/playlizt_app/web/index.html
@@ -31,6 +31,7 @@
 
   <title>playlizt_app</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://www.youtube.com/iframe_api"></script>
 </head>
 <body>
   <div id="loading">
